Updated the pages

--- a/Static/MyAttendancePage.html
+++ b/Static/MyAttendancePage.html
@@ -35,20 +35,17 @@
           <tr bgcolor="#DEE0DF">
             <th width="10%" height="25" bgcolor="#DEE0DF" scope="col">Date</th>
             <th width="25%" scope="col">Course</th>
-            <th width="10%" scope="col">Presence</th>
-            <th width="10%" scope="col">Absence</th>
+            <th width="10%" scope="col">Attendance</th>
             <th width="20%" scope="col">Appeal request</th>
             </tr>
           <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <th height="25" scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
-            <th scope="col">&nbsp;</th>
             <th scope="col"><input type="submit" name="submit" id="submit" value="Send" onClick="alert('Appeal request sent!');"></th>
           </tr>
           <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <th height="25" scope="col">&nbsp;</th>
-            <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             <th scope="col"><input type="submit" name="submit2" id="submit2" value="Send" onClick="alert('Appeal request sent!');"></th>
@@ -57,19 +54,16 @@
             <th height="25" scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
-            <th scope="col">&nbsp;</th>
             <th scope="col"><input type="submit" name="submit3" id="sbmit3" value="Send" onClick="alert('Appeal request sent!');"></th>
           </tr>
           <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <th height="25" scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
-            <th scope="col">&nbsp;</th>
             <th scope="col"><input type="submit" name="submit" id="submit" value="Send" onClick="alert('Appeal request sent!');"></th>
           </tr>
           <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <th height="25" scope="col">&nbsp;</th>
-            <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             <th scope="col"><input type="submit" name="submit3" id="submit3" value="Send" onClick="alert('Appeal request sent!');"></th>
