--- a/Static/StudentAppeals.html
+++ b/Static/StudentAppeals.html
@@ -35,18 +35,10 @@
           <tr bgcolor="#DEE0DF">
             <th width="10%" height="25" bgcolor="#DEE0DF" scope="col">Date</th>
             <th width="25%" scope="col">Course</th>
-            <th width="10%" scope="col">Presence</th>
-            <th width="10%" scope="col">Abscence</th>
+            <th width="10%" scope="col">Attendance</th>
             </tr>
           <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <th height="25" scope="col">&nbsp;</th>
-            <th scope="col">&nbsp;</th>
-            <th scope="col">&nbsp;</th>
-            <th scope="col">&nbsp;</th>
-            </tr>
-          <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
-            <th height="25" scope="col">&nbsp;</th>
-            <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             </tr>
@@ -54,17 +46,19 @@
             <th height="25" scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
+            </tr>
+          <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
+            <th height="25" scope="col">&nbsp;</th>
+            <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             </tr>
           <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <th height="25" scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
-            <th scope="col">&nbsp;</th>
             </tr>
           <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
             <th height="25" scope="col">&nbsp;</th>
-            <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             <th scope="col">&nbsp;</th>
             </tr>
